--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,16 +22,17 @@ classifiers = [
 ]
 dependencies = [
 ]
-optional-dependencies = {
-    dev = [
-        "pytest>=6.2",
-        "flake8>=3.9",
-    ],
-    docs = [
-        "Sphinx>=4.0",
-        "sphinx-rtd-theme>=0.5.2",
-    ],
-}
+
+[project.optional-dependencies]
+dev = [
+    "pytest>=6.2",
+    "flake8>=3.9",
+],
+docs = [
+    "Sphinx>=4.0",
+    "sphinx-rtd-theme>=0.5.2",
+],
+
 
 [project.urls]
 homepage = "https://github.com/yourusername/your-package-name"
