--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=42", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "your-package-name"
+name = "abc_abc_example_repo"
 version = "0.1.0"
 description = "A brief description of your package."
 readme = "README.md"
